Packaging and swagger integration

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample application to track covid 19",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/bhanukarandeniya/covid-19-app#readme",
   "dependencies": {
+    "config": "^3.3.1",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4"
   }
 }
