--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/bhanukarandeniya/covid-19-app#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5",
     "swagger-jsdoc": "^4.0.0",
