--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5",
