--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample application to track covid 19",
   "main": "index.js",
   "scripts": {
-    "start": "export NODE_ENV=default && node app.js",
+    "start": "node -r dotenv/config app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/bhanukarandeniya/covid-19-app#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
@@ -30,5 +29,8 @@
     "sequelize": "^6.3.5",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
