--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,7 @@ APP_PORT=9000
 DB_HOST=localhost
 DB_SCHEMA=covid_tracker_db
 DB_USER=root
-DB_PASSWORD=mysql
+DB_PASSWORD=root
 DB_DIALECT=mysql
 DB_POOL_MAX=5
 DB_POOL_MIN=5
