Docckerized application mapped to local mysql DB server

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_ENV=prod
 APP_PORT=8000
 DB_HOST=localhost
 DB_SCHEMA=covid_tracker_db
-DB_USER=root
-DB_PASSWORD=root
+DB_USER=
+DB_PASSWORD=
 DB_DIALECT=mysql
 DB_POOL_MAX=5
 DB_POOL_MIN=5
