--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,20 @@ services:
     environment:
       DB_SCHEMA: covid_tracker_db
       DB_USER: root
-      DB_PASSWORD: root
-      DB_HOST: mysqldb
+      DB_PASSWORD: mysql
+      DB_HOST: localhost
       DB_DIALECT: mysql
       DB_POOL_MAX: 5
       DB_POOL_MIN: 5
       DB_POOL_ACQUIRE: 30000
       DB_POOL_IDLE: 10000
-      APP_PORT: 7000
+      APP_PORT: 9000
       CORS_ORIGIN: http://localhost:8081
     # depends_on:
     #   - db
     ports:
-      - "9000:7000"
+      - "9000:9000"
+    network_mode: "host"
 
-volumes:
-  mysql-data:
+# volumes:
+#   mysql-data:
