Change Regis configs to accomadate for docker-compose script

--- a/.env.dev
+++ b/.env.dev
@@ -2,8 +2,8 @@ APP_ENV=development
 APP_PORT=9000
 DB_HOST=localhost
 DB_SCHEMA=covid_tracker_db
-DB_USER=
-DB_PASSWORD=
+DB_USER=root
+DB_PASSWORD=mysql
 DB_DIALECT=mysql
 DB_POOL_MAX=5
 DB_POOL_MIN=5
