--- a/.env
+++ b/.env
@@ -9,5 +9,7 @@ DB_POOL_MAX=5
 DB_POOL_MIN=5
 DB_POOL_ACQUIRE=30000
 DB_POOL_IDLE=10000
+CACHE_HOST=localhost
+CACHE_PORT=6379
 
 CORS_ORIGIN=http://localhost:8081
