--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
 version: "3.1"
 services:
-  # db:
-  #   container_name: mysqldb
-  #   image: mysql
-  #   restart: always
-  #   environment:
-  #     MYSQL_USER: root
-  #     MYSQL_ROOT_PASSWORD: root
-  #     MYSQL_DATABASE: covid_tracker_db
-  #   ports:
-  #     - "3306:3306"
-  #   volumes:
-  #     - mysql-data:/var/lib/mysql
+  db:
+    container_name: mysql-container
+    image: mysql
+    restart: "no"
+    environment:
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: covid_tracker_db
+    # ports:
+    #   - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  redis:
+     container_name: redis-container
+     image: "redis:alpine"
+     restart: "no"
+    #  ports:
+    #   - "6379:6379"
 
   bhanuka-app:
     build:
@@ -19,8 +26,8 @@ services:
     environment:
       DB_SCHEMA: covid_tracker_db
       DB_USER: root
-      DB_PASSWORD: mysql
-      DB_HOST: localhost
+      DB_PASSWORD: root
+      DB_HOST: db
       DB_DIALECT: mysql
       DB_POOL_MAX: 5
       DB_POOL_MIN: 5
@@ -28,11 +35,14 @@ services:
       DB_POOL_IDLE: 10000
       APP_PORT: 9000
       CORS_ORIGIN: http://localhost:8081
-    # depends_on:
-    #   - db
+      CACHE_HOST: redis
+      CACHE_PORT: 6379
+    depends_on:
+      - db
+      - redis
     ports:
       - "9000:9000"
-    network_mode: "host"
+   # network_mode: "host"
 
-# volumes:
-#   mysql-data:
+volumes:
+  mysql-data:
