Data fetching implemented with facker

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_ENV=prod
 APP_PORT=8000
 DB_HOST=localhost
 DB_SCHEMA=covid_tracker_db
-DB_USER=
-DB_PASSWORD=
+DB_USER=root
+DB_PASSWORD=mysql
 DB_DIALECT=mysql
 DB_POOL_MAX=5
 DB_POOL_MIN=5
@@ -11,5 +11,7 @@ DB_POOL_ACQUIRE=30000
 DB_POOL_IDLE=10000
 CACHE_HOST=localhost
 CACHE_PORT=6379
+COVID_RECORDS=100
+PERSON_RECORDS=50
 
 CORS_ORIGIN=http://localhost:8081
