--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "custom-env": "^2.0.1",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "faker": "^5.1.0",
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
