--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "export NODE_ENV=prod && node app.js",
+    "dev": "export NODE_ENV=prod && nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "helmet": "^4.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.6",
     "properties-reader": "^2.1.1",
     "redis": "^3.0.2",
     "sequelize": "^6.3.5",
