docker compose adjusted for failure, adjusted data fetch only for empty tables

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_ENV=prod
-APP_PORT=9000
-DB_HOST=localhost
-DB_SCHEMA=covid_tracker_db
-DB_USER=root
-DB_PASSWORD=mysql
-DB_DIALECT=mysql
-DB_POOL_MAX=5
-DB_POOL_MIN=5
-DB_POOL_ACQUIRE=30000
-DB_POOL_IDLE=10000
-CACHE_HOST=localhost
-CACHE_PORT=6379
-COVID_RECORDS=10
-PERSON_RECORDS=20
+APP_PORT=
+DB_HOST=
+DB_SCHEMA=
+DB_USER=
+DB_PASSWORD=
+DB_DIALECT=
+DB_POOL_MAX=
+DB_POOL_MIN=
+DB_POOL_ACQUIRE=
+DB_POOL_IDLE=
+CACHE_HOST=
+CACHE_PORT=
+COVID_RECORDS=
+PERSON_RECORDS=
 
-CORS_ORIGIN=http://localhost:8081
+CORS_ORIGIN=
